--- a/finderservice/jsconfig.json
+++ b/finderservice/jsconfig.json
@@ -4,6 +4,7 @@
       "@/*": ["./src/*"],
       "@public/*": ["./public/*"],
       "@components/*": ["./components/*"],
+      "@redux/*": ["./src/redux/*"],
     }
   }
 }
