--- a/finderservice/package.json
+++ b/finderservice/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
+    "react-avatar-edit": "^1.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
