--- a/finderservice/package.json
+++ b/finderservice/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
+    "cloudinary": "^1.37.0",
     "cookie": "^0.5.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
